[tool.poetry]
name = "genetic-prompt-compiler"
version = "0.2.1"
description = ""
authors = ["Antonin Deniau <antonin.deniau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
